[package]
name = "redis-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.0.0"
serde = { version = "1.0.159", features = ["derive"] }
anyhow = "1.0"
redis = { version = "0.24.0", features = [
  "tokio-comp",
  "connection-manager",
  "cluster-async",
] }
tokio = { version = "1.28.0", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "net",
  "signal",
] }
